--- a/assign04.html
+++ b/assign04.html
@@ -35,10 +35,10 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
 <script src="site_libs/quarto-html/anchor.min.js"></script>
 <link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting-dark.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="dark">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -90,7 +90,7 @@ ul.task-list li input[type="checkbox"] {
     <ul class="dropdown-menu" aria-labelledby="nav-menu-assignments">    
         <li>
     <a class="dropdown-item" href="./assign01.html">
- <span class="dropdown-text">Assignment 1: Generative Leaf</span></a>
+ <span class="dropdown-text">Assignment 1: Generative Leaves</span></a>
   </li>  
         <li>
     <a class="dropdown-item" href="./assign02.html">
@@ -104,10 +104,14 @@ ul.task-list li input[type="checkbox"] {
     <a class="dropdown-item" href="./assign04.html">
  <span class="dropdown-text">Assignment 4</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./assign05.html">
+ <span class="dropdown-text">assign05</span></a>
+  </li>  
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="https://kyndall-brown.github.io/blog">blog</a>
+    <a class="nav-link" href="https://kyndall-brown.github.io/blog">Blog</a>
   </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
@@ -141,7 +145,10 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>Working on itttt</p>
+<p>These are the data visualizations we completed as a team!</p>
+<p><img src="MicrosoftTeams-image%20(1).png" class="img-fluid"></p>
+<p><img src="MicrosoftTeams-image.png" class="img-fluid"></p>
+<p>Thanks to my team: Leslie, Ana, Theophilus, Michelle and myself. Shoutout to Michelle for staying up late and working hard, and to Leslie for making the final breakthrough that led to our finished charts!</p>
 
 
 
