--- a/assign01.html
+++ b/assign01.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Kyndall Brown - Assignment 1: Generative Leaves</title>
+<title>Kyndall Brown - Assignment 1</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -86,27 +86,40 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./about.html">About</a>
   </li>  
   <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-assignments" role="button" data-bs-toggle="dropdown" aria-expanded="false">Assignments</a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-assignments">    
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6356" role="button" data-bs-toggle="dropdown" aria-expanded="false">EPPS 6356</a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-epps-6356">    
         <li>
-    <a class="dropdown-item" href="./assign01.html">
- <span class="dropdown-text">Assignment 1: Generative Leaves</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/epps6356-assignment01.html">
+ <span class="dropdown-text">Assignment #1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign02.html">
- <span class="dropdown-text">Assignment 2</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/murrells-rgraphics-basic-r-programs/">
+ <span class="dropdown-text">Assignment #2</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign03.html">
- <span class="dropdown-text">Assignment 3</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/comparing-regression-models/">
+ <span class="dropdown-text">Assignment #3</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign04.html">
- <span class="dropdown-text">Assignment 4</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/first-hackathon-results/">
+ <span class="dropdown-text">Assignment #4</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign05.html">
- <span class="dropdown-text">assign05</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
+ <span class="dropdown-text">Assignment #5</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
+ <span class="dropdown-text">Prepare for Class</span></a>
+  </li>  
+    </ul>
+  </li>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6302" role="button" data-bs-toggle="dropdown" aria-expanded="false">EPPS 6302</a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-epps-6302">    
+        <li>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
+ <span class="dropdown-text">Prepare for Class</span></a>
   </li>  
     </ul>
   </li>
@@ -131,7 +144,8 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Assignment 1: Generative Leaves</h1>
+<h1 class="title">Assignment 1</h1>
+<p class="subtitle lead">Generative Leaves</p>
 </div>
 
 
