--- a/index.html
+++ b/index.html
@@ -86,27 +86,40 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./about.html">About</a>
   </li>  
   <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-assignments" role="button" data-bs-toggle="dropdown" aria-expanded="false">Assignments</a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-assignments">    
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6356" role="button" data-bs-toggle="dropdown" aria-expanded="false">EPPS 6356</a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-epps-6356">    
         <li>
-    <a class="dropdown-item" href="./assign01.html">
- <span class="dropdown-text">Assignment 1: Generative Leaves</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/epps6356-assignment01.html">
+ <span class="dropdown-text">Assignment #1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign02.html">
- <span class="dropdown-text">Assignment 2</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/murrells-rgraphics-basic-r-programs/">
+ <span class="dropdown-text">Assignment #2</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign03.html">
- <span class="dropdown-text">Assignment 3</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/comparing-regression-models/">
+ <span class="dropdown-text">Assignment #3</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign04.html">
- <span class="dropdown-text">Assignment 4</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/first-hackathon-results/">
+ <span class="dropdown-text">Assignment #4</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./assign05.html">
- <span class="dropdown-text">assign05</span></a>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
+ <span class="dropdown-text">Assignment #5</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
+ <span class="dropdown-text">Prepare for Class</span></a>
+  </li>  
+    </ul>
+  </li>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6302" role="button" data-bs-toggle="dropdown" aria-expanded="false">EPPS 6302</a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-epps-6302">    
+        <li>
+    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
+ <span class="dropdown-text">Prepare for Class</span></a>
   </li>  
     </ul>
   </li>
@@ -128,7 +141,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#kyndall-browns-website" id="toc-kyndall-browns-website" class="nav-link active" data-scroll-target="#kyndall-browns-website">Kyndall Brown’s website</a></li>
+  <li><a href="#my-personal-data-science-website" id="toc-my-personal-data-science-website" class="nav-link active" data-scroll-target="#my-personal-data-science-website">My Personal Data Science Website</a></li>
   </ul>
 </nav>
     </div>
@@ -151,8 +164,8 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="kyndall-browns-website" class="level3">
-<h3 class="anchored" data-anchor-id="kyndall-browns-website">Kyndall Brown’s website</h3>
+<section id="my-personal-data-science-website" class="level3">
+<h3 class="anchored" data-anchor-id="my-personal-data-science-website">My Personal Data Science Website</h3>
 <p>Welcome to my website! Data adventures are posted here.</p>
 <p>Please use the navigation bar at the top to see my assignments and my <a href="https://kyndall-brown.github.io/blog" title="kyndall-brown.github.io/blog">blog</a>!</p>
 <p>I (am supposed to) update regularly, so stay posted &lt;3</p>
