--- a/index.html
+++ b/index.html
@@ -86,46 +86,8 @@ ul.task-list li input[type="checkbox"] {
   <li class="nav-item">
     <a class="nav-link" href="./about.html">About</a>
   </li>  
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6356" role="button" data-bs-toggle="dropdown" aria-expanded="false">EPPS 6356</a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-epps-6356">    
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/epps6356-assignment01.html">
- <span class="dropdown-text">Assignment #1</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/murrells-rgraphics-basic-r-programs/">
- <span class="dropdown-text">Assignment #2</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/comparing-regression-models/">
- <span class="dropdown-text">Assignment #3</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/posts/first-hackathon-results/">
- <span class="dropdown-text">Assignment #4</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
- <span class="dropdown-text">Assignment #5</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
- <span class="dropdown-text">Prepare for Class</span></a>
-  </li>  
-    </ul>
-  </li>
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6302" role="button" data-bs-toggle="dropdown" aria-expanded="false">EPPS 6302</a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-epps-6302">    
-        <li>
-    <a class="dropdown-item" href="https://kyndall-brown.github.io/blog/archive.html">
- <span class="dropdown-text">Prepare for Class</span></a>
-  </li>  
-    </ul>
-  </li>
   <li class="nav-item">
-    <a class="nav-link" href="https://kyndall-brown.github.io/blog">Blog</a>
+    <a class="nav-link" href="https://kyndall-brown.github.io/blog">Assignments and Blog</a>
   </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
